--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -76,3 +76,24 @@ footer {
 #as2 {
     grid-area: as2;
 }
+
+.glide2 {
+    display: none;
+}
+
+#close {
+    align-self: flex-end;
+    margin-right: 40vw;
+}
+
+.glide1 {
+    background-color: white;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    position: fixed;
+}
