--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -70,3 +70,24 @@ a {
     border-radius: 0.5em;
     padding: 0.5em;
 }
+
+.glide2 {
+    display: none;
+}
+
+#close {
+    align-self: flex-end;
+    margin-right: 40vw;
+}
+
+.glide1 {
+    background-color: white;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 999;
+    position: fixed;
+}
