--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -21,10 +21,10 @@ header {
     justify-content: space-between;
     position: fixed;
     background-color: white;
+    z-index: 1000;
 }
 
 main {
-    background-color: blueviolet;
     justify-content: center;
     width: 100%;
     height: fit-content;
@@ -50,13 +50,11 @@ main {
 }
 
 section {
-    background-color: grey;
     grid-area: sct;
 }
 
 aside {
     grid-area: srt;
-    background-color: red;
     padding-bottom: 0.5em;
 }
 
@@ -90,4 +88,8 @@ a {
     align-items: center;
     z-index: 999;
     position: fixed;
+}
+
+#newPost {
+    margin-top: 0.5em;
 }
