--- a/CSS/newPost.css
+++ b/CSS/newPost.css
@@ -1,13 +1,13 @@
 .glide1 {
     background-color: white;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     z-index: 999;
-    position: fixed;
+    position: absolute;
     border: none;
 }
 
@@ -47,7 +47,7 @@ a {
 }
 
 main {
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,4 +65,40 @@ textarea {
     display: flex;
     align-content: center;
     justify-content: space-evenly;
+}
+
+#postTitle, #postContent {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 0.75em;
+    margin: 0.5em 0;
+    width: 100%;
+}
+
+#postButton {
+    background: #3498DB;
+    color: white;
+    padding: 0.75em 1.5em;
+    border: none;
+    border-radius: 4px;
+    margin-top: 1em;
+}
+
+input[type="checkbox"] {
+    accent-color: #3498DB;
+    transform: scale(1.5);
+    margin: 0 0.5em;
+}
+
+footer {
+    position: absolute;
+    background-color: white;
+    width: 100vw;
+    left: 0;
+    bottom: 0;
+    margin: 0;
+}
+
+footer a {
+    display: block;
 }
