--- a/CSS/newPost.css
+++ b/CSS/newPost.css
@@ -1,7 +1,11 @@
+body {
+    margin: 0;
+}
+
 .glide1 {
-    background-color: white;
-    width: 100%;
     height: 100%;
+    width: 100%;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -31,6 +35,8 @@ header {
     justify-content: space-between;
     position: fixed;
     z-index: 1000;
+    align-items: center;
+    margin: 0;
 }
 
 a {
