--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,3 +1,11 @@
+html {
+  margin-top: 0;
+}
+
+body {
+  margin: 0;
+}
+
 #logo {
   width: 50px;
 }
@@ -6,11 +14,9 @@
   font-family: Material Icons;
   cursor: pointer;
   margin-right: 2em;
-  margin-top: 0.5em;
 }
 
 header {
-  margin-top: -0.5em;
   width: 100vw;
   display: flex;
   flex-direction: row;
@@ -19,7 +25,7 @@ header {
   background-color: rgba(255, 255, 255, 0);
   z-index: 1000;
   align-items: center;
-  top: 8px;
+  top: 0;
 }
 
 main {
@@ -33,7 +39,7 @@ main {
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
   margin: 1em;
-  overflow: hidden;
+  overflow-wrap:anywhere;
 }
 
 aside {
