--- a/CSS/Index.css
+++ b/CSS/Index.css
@@ -1,9 +1,13 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin-left: 0;
     background-color: #f9f9f9;
     background-image: url('../IMG/kuu-akura-pnK6Q-QTHM4-unsplash.png');
     background-size: cover;
-    width: 100vw;
+
 }
 
 main {
@@ -16,18 +20,20 @@ main {
 
 #logo {
     width: 50px;
+    cursor: pointer;
 }
 
 section {
     display: flex;
-    justify-content: center;   
+    justify-content: center;
     border: 2px solid black;
     padding-left: 1em;
     padding-right: 1em;
     height: fit-content;
     padding-bottom: 2em;
     margin-top: 1.5em;
-    grid-area: sec;
+    position: absolute;
+    top: 50px;
 }
 
 ul {
@@ -47,7 +53,7 @@ ul {
 }
 
 .smallButton {
-    font-size: 0.5em;
+    font-size: small;
     cursor: pointer;
 }
 
@@ -67,22 +73,24 @@ a {
 .material-icons {
     font-family: Material Icons;
     cursor: pointer;
-    margin-right: 2em;
+    font-size: xx-large !important;
 }
 
 header {
-    width: 100vw;
+    width: 100%;
+    padding-left: 10vw;
+    padding-right: 10vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     position: fixed;
+    background-color: rgba(255, 255, 255, 0);
     z-index: 1000;
     align-items: center;
-    top: 0;
 }
 
 footer {
-    position:absolute;
+    position: absolute;
     background-color: white;
     width: 100vw;
     bottom: 0;
@@ -115,6 +123,7 @@ footer a {
     border: none;
     margin: 0;
     top: 0;
+    gap: 1rem;
 }
 
 button {
@@ -129,13 +138,14 @@ button {
     visibility: collapse;
 }
 
-#boxLogin, #boxNew, #boxWelcome {
+#boxLogin,
+#boxNew,
+#boxWelcome {
     background: white;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     padding-left: 2em;
     padding-right: 2em;
-    grid-area: box;
 }
 
 input[type="text"],
@@ -151,8 +161,21 @@ input[type="password"] {
     border: none;
     padding: 0.75em 1.5em;
     border-radius: 4px;
+    border: black 1.5px solid;
 }
 
 .button:hover {
     background-color: #2980B9;
+}
+
+#glider .button {
+    background-color: #3498DB;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    color: white;
+    border: black 1.5px solid;
+}
+
+.button:hover {
+    background-color: #2980B9 !important;
 }
