--- a/CSS/Main.css
+++ b/CSS/Main.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    bottom: 0;
+}
+
 body {
     width: 100%;
     position: relative;
@@ -15,16 +19,19 @@ body {
 
 #logo {
     width: 50px;
+    cursor: pointer;
 }
 
 .material-icons {
     font-family: Material Icons;
     cursor: pointer;
-    margin-right: 2em;
+    font-size: xx-large !important;
 }
 
 header {
-    width: 100vw;
+    width: 100%;
+    padding-left: 10vw;
+    padding-right: 10vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -40,7 +47,7 @@ main {
     height: fit-content;
     padding-top: 4em;
     display: grid;
-    min-height: calc(100vh - 4em);
+    min-height: calc(80vh - 4em);
     margin: 0;
 }
 
@@ -81,10 +88,7 @@ a {
     border-radius: 0.5em;
     padding: 0.5em;
     color: white;
-}
-
-.glide2 {
-    display: none;
+    border: black 1.5px solid;
 }
 
 #close {
@@ -102,6 +106,11 @@ a {
     align-items: center;
     z-index: 999;
     position: absolute;
+    gap: 1rem;
+}
+
+.glide2 {
+    display: none;
 }
 
 #newPost {
@@ -176,7 +185,7 @@ aside .button {
     box-shadow: black 0px 0px 2px;
     width: 80%;
     justify-self: center;
-    height: 50%;
+    min-height: fit-content;
 }
 
 #noPosts p {
@@ -185,16 +194,14 @@ aside .button {
 }
 
 footer {
-    position: absolute;
-    justify-self: end;
+    display: flex;
+    position: fixed;
     background-color: white;
-    width: max-content;
+    align-content: center;
     width: 100%;
-    box-sizing: content-box;
-    margin-bottom: 0;
     bottom: 0;
 }
 
-footer a {
-    display: block;
+.button:hover {
+    background-color: #2980B9;
 }
