--- a/CSS/newPost.css
+++ b/CSS/newPost.css
@@ -13,6 +13,7 @@ body {
     z-index: 999;
     position: absolute;
     border: none;
+    gap: 1rem;
 }
 
 .glide2 {
@@ -21,15 +22,19 @@ body {
 
 #logo {
     width: 50px;
+    cursor: pointer;
 }
 
 .material-icons {
     font-family: Material Icons;
     cursor: pointer;
+    font-size: xx-large !important;
 }
 
 header {
-    width: 99vw;
+    width: 80vw;
+    padding-left: 10vw;
+    padding-right: 10vw;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -64,7 +69,7 @@ h2 {
 }
 
 textarea {
-    resize:none;
+    resize: none;
 }
 
 #newPostSection div {
@@ -73,7 +78,8 @@ textarea {
     justify-content: space-evenly;
 }
 
-#postTitle, #postContent {
+#postTitle,
+#postContent {
     border: 1px solid #ddd;
     border-radius: 4px;
     padding: 0.75em;
@@ -81,13 +87,14 @@ textarea {
     width: 100%;
 }
 
-#postButton {
+Button {
     background: #3498DB;
     color: white;
     padding: 0.75em 1.5em;
     border: none;
     border-radius: 4px;
     margin-top: 1em;
+    border: black 1.5px solid;
 }
 
 input[type="checkbox"] {
@@ -103,8 +110,27 @@ footer {
     left: 0;
     bottom: 0;
     margin: 0;
+    display: flex;
 }
 
 footer a {
     display: block;
+}
+
+button:hover , .button:hover {
+    background-color: #2980B9 !important;
+    cursor: pointer;
+}
+
+.button {
+    background-color: #3498DB;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    color: white;
+    border: black 1.5px solid;
+}
+
+#close {
+    align-self: flex-end;
+    margin-right: 40vw;
 }
