--- a/CSS/profile.css
+++ b/CSS/profile.css
@@ -1,5 +1,6 @@
 html {
   margin-top: 0;
+  background-color: white;
 }
 
 body {
@@ -8,16 +9,19 @@ body {
 
 #logo {
   width: 50px;
+  cursor: pointer;
 }
 
 .material-icons {
   font-family: Material Icons;
   cursor: pointer;
-  margin-right: 2em;
+  font-size: xx-large !important;
 }
 
 header {
-  width: 100vw;
+  width: 80vw;
+  padding-left: 10vw;
+  padding-right: 10vw;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -36,10 +40,8 @@ main {
     'section aside';
   min-height: 80vh;
   background-color: white;
-  border-radius: 12px;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-  margin: 1em;
-  overflow-wrap:anywhere;
+
+  overflow-wrap: anywhere;
 }
 
 aside {
@@ -51,18 +53,6 @@ aside {
   border-radius: 1em;
   margin-bottom: 2em;
   padding-top: 1em;
-}
-
-button {
-  margin-top: 1em;
-  margin-left: 0.5em;
-  margin-right: 0.5em;
-  padding: 0.5em;
-  border-radius: 0.5em;
-  background-color: white;
-  border: 1px solid black;
-  cursor: pointer;
-  size: fit-content;
 }
 
 #settings1,
@@ -117,6 +107,7 @@ button {
   align-items: center;
   z-index: 999;
   position: absolute;
+  gap: 1rem;
 }
 
 a {
@@ -169,7 +160,7 @@ body {
 }
 
 .info input:focus {
-  border-color: #3498db;
+  border-color: #2980B9;
   outline: none;
   box-shadow: 0 0 0 3px rgba(52, 152, 219, 0.2);
 }
@@ -225,7 +216,7 @@ input[type="checkbox"]:checked::after {
 }
 
 button {
-  background: linear-gradient(135deg, #3498db, #2980b9);
+  background: #3498DB;
   color: black;
   border: none;
   border-radius: 8px;
@@ -233,14 +224,13 @@ button {
   font-weight: 500;
   cursor: pointer;
   transition: all 0.3s;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
   width: fit-content;
   margin: 0.5em 0;
+  border: black 1.5px solid;
 }
 
-button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+button:hover , .button:hover {
+  background: #2980B9;
 }
 
 #dangerButton {
@@ -273,7 +263,8 @@ aside button:hover::before {
 }
 
 footer {
-  position: absolute;
+  display: flex;
+  position: fixed;
   background-color: white;
   width: auto;
   left: 0;
@@ -281,6 +272,16 @@ footer {
   width: 100vw;
 }
 
-footer a {
-  display: block;
+
+.button {
+  background-color: #3498DB;
+  border-radius: 0.5em;
+  padding: 0.5em;
+  color: white;
+  border: black 1.5px solid;
+}
+
+footer .button {
+  color: white !important;
+  ;
 }
